--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,41 @@
-.App {
-  text-align: center;
+.item-list{
+  list-style: none;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.item-list li {
+  padding: 5px;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.list-wrapper {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  padding: 10px;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.list-list{
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  text-align: center;
+  margin: 10px;
 }
-
-.App-link {
-  color: #61dafb;
+.task-form {
+  padding: 10px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.task-form input{
+  padding: 5px;
+  margin: 5px;
+}
+.item-list span{
+  padding: 10px;
+}
+.red {
+  color: red;
+}
+.green{
+  color: green;
+}
+.red-border{
+  border: 1px solid red;
+}
+.green-border{
+  border: 1px solid green;
 }
